# MarkerSeek

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/markerseek/: __init__.py  __main__.py  analysis.py  cli.py  models.py  plotting.py
test_data/: Salvia_aethiopis.gb  Salvia_amarissima.gb  Salvia_chinensis.gb  Salvia_dorrii.gb  Salvia_eremostachya.gb  Salvia_fruticosa.gb  Salvia_huberi.gb  Salvia_kronenburgii.gb  Salvia_limbata.gb  Salvia_mohavensis.gb  Salvia_officinalis_subsp._gallica.gb  Salvia_pachyphylla.gb  Salvia_pratensis.gb  Salvia_saccardiana.gb  Salvia_sonomensis.gb  Salvia_spathacea.gb  Salvia_verbenaca.gb  Salvia_xanthocheila.gb  make_synthetic_aln.py
test_data2/: Mentha canadensis.gb  Mentha longifolia.gb  Mentha spicata.gb  Mentha suaveolens.gb  Mentha x piperita.gb  Mentha x verticillata.gb  Mentha x villosa.gb  Mentha_aquatica.gb  Mentha_arvensis.gb  Mentha_sp._Snogerup_10996.gb  Mentha_sp._Svensson_Wigermo_20766.gb  Mentha_x_rotundifolia.gb
tests/: conftest.py  test_analysis.py  test_cli.py  test_plotting.py
